solve font issue

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Lalezar&family=Mada:wght@200..900&family=Reem+Kufi:wght@400..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Cairo:wght@200..1000&family=Lalezar&family=Mada:wght@200..900&family=Reem+Kufi:wght@400..700&display=swap"
       rel="stylesheet"
     />
   </head>
